--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ img {margin-bottom: -7px}
   #section1 {padding-top:50px;height:500px; }
   #section2 {padding-top:50px;height:200px;}
   #section3 {padding-top:50px;height:200px;}
-  #section4 {padding-top:75px;height:500px;}
+  #section4 {padding-top:100px;height:500px;}
   </style>
   </head>
 
@@ -151,7 +151,7 @@ h3 {
 <div class="w3-content" style="max-width:1500px">
 
 <!-- Header -->
-<div class="w3-opacity">
+<div>
 <div class="w3-clear"></div>
  <div id="section2" class="container-fluid">
 <header class="w3-center w3-margin-bottom">
